fixed 640px layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,13 +519,13 @@ body {
   .work {
     position: relative;
     float: left;
-    width: 250px;
-    margin: 20px 20px 25px;
+    width: 450px;
+    margin: 0px 15px 25px;
     overflow: auto;
   }
   
   .work:nth-child(even) {
-    margin-right: 40px;
+    margin-right: 0px;
   }
   
   .work img {
